infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tik-live-pro
  labels:
    app.kubernetes.io/part-of: tik-live-pro
